--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "expo": "~54.0.13",
     "expo-constants": "~18.0.9",
     "expo-device": "~8.0.9",
+    "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-notifications": "~0.32.12",
+    "expo-print": "^15.0.7",
     "expo-router": "~6.0.11",
+    "expo-sharing": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.8",
